--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -441,7 +441,7 @@ to include the above (new) ``TeX4ht license text''.  I don't understand.
 \<usepackage.4ht\><<<
 % usepackage.4ht (|version), generated from |jobname.tex
 % Copyright |CopyYear.2003. Eitan M. Gurari
-|<TeX4ht copywrite|>
+|<TeX4ht copyright|>
    |<insert into latex|>
 \endinput
 >>>
