Change in rm-lm fonts
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@216 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,11 @@
+2016-12-11  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-fonts-modern.tex
+	(tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/rm-lm.htf,
+	tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lm/rm-lmt.htf,
+	tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lm/rm-lmvt.htf): Typewritter lmodern
+	fonts in OT1 encoding containded wrong backslashes and other characters.
+	
 2016-12-10  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-4ht.tex (usepackage.4ht): There was catcode issue with 
