--- a/lit/tex4ht-fonts-modern.tex
+++ b/lit/tex4ht-fonts-modern.tex
@@ -2052,6 +2052,12 @@ htfcss: rm-lmssq  font-family: sans-serif;
 htfcss: rm-lmssqbo  font-family: sans-serif; font-style: oblique; font-weight: bold;
 htfcss: rm-lmssqbx  font-family: sans-serif; font-weight: bold;
 htfcss: rm-lmssqo  font-family: sans-serif; font-style: oblique;
+>>>
+
+\AddFont{rm-lm}{unicode/lm/rm-lm}
+
+\<rm-lmt\><<<
+.lm-ec
 htfcss: rm-lmtcso  font-style: oblique; font-family: monospace;
 htfcss: rm-lmtk  font-family: monospace;
 htfcss: rm-lmtko  font-style: oblique; font-family: monospace;
@@ -2060,8 +2066,14 @@ htfcss: rm-lmtlc  font-weight: light; font-family: monospace;
 htfcss: rm-lmtlco  font-weight: light; font-style: oblique; font-family: monospace;
 htfcss: rm-lmtlo  font-weight: light; font-style: oblique; font-family: monospace;
 htfcss: rm-lmtt  font-family: monospace;
+htfcss: rm-lmtk  font-family: monospace;
 htfcss: rm-lmtti  font-family: monospace; font-style:italic;
 htfcss: rm-lmtto  font-style: oblique; font-family: monospace;
+>>>
+\AddFont{rm-lmt}{alias/lm/rm-lmt}
+
+\<rm-lmvt\><<<
+.lm-ec
 htfcss: rm-lmvtk  font-family: monospace;
 htfcss: rm-lmvtko  font-style: oblique; font-family: monospace;
 htfcss: rm-lmvtl  font-weight: light; font-family: monospace;
@@ -2069,25 +2081,7 @@ htfcss: rm-lmvtlo  font-weight: light; font-style: oblique; font-family: monospa
 htfcss: rm-lmvtt  font-family: monospace;
 htfcss: rm-lmvtto  font-style: oblique; font-family: monospace;
 >>>
-
-\AddFont{rm-lm}{unicode/lm/rm-lm}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+\AddFont{rm-lmvt}{alias/lm/rm-lmvt}
 
 
 \<lmbsy\><<<
@@ -2408,6 +2402,7 @@ htfcss: ec-lmbx  font-weight: bold;
 htfcss: ec-lmbxi  font-style:italic; font-weight: bold;
 htfcss: ec-lmbxo  font-style: oblique; font-weight: bold;
 htfcss: ec-lmcsco  font-style: oblique;
+htfcss: ec-lmcs  font-variant: small-caps;
 htfcss: ec-lmri  font-style:italic;
 htfcss: ec-lmro  font-style: oblique;
 htfcss: ec-lmss  font-family: sans-serif;
