--- a/lit/tex4ht-fonts-modern.tex
+++ b/lit/tex4ht-fonts-modern.tex
@@ -1,5 +1,5 @@
 % $Id$
-% Copyright 2009-2015 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright 1997-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -1779,9 +1779,9 @@ htfcss: cs-lmtcso font-style:italic;
 
 \<rm-lm\><<<
 rm-lm 0 255
-'&#x0393;' '' `% /Gamma `%      0 % rm-lm.htf `version % 
-'&#x0394;' '' `% /Delta `%      1 % Copyright (C) `CopyYear.2007.`<EMG`>%   
-'&#x0398;' '' `% /Theta `%      2 `<version 2`> 
+'&#x0393;' '' `% /Gamma `%      0 % rm-lm.htf `version, generated from `jobname
+'&#x0394;' '' `% /Delta `%      1 % Copyright 2009-2016 TeX Users Group
+'&#x0398;' '' `% /Theta `%      2 % Copyright 2007-2009 Eitan M. Gurari
 '&#x039B;' '' `% /Lambda `%      3 `<version 3`> 
 '&#x039E;' '' `% /Xi `%      4 `<version 4`> 
 '&#x03A0;' '' `% /Pi `%      5 `<version 5`> 
@@ -1790,13 +1790,13 @@ rm-lm 0 255
 '&#x03A6;' '' `% /Phi `%      8 `<version 8`> 
 '&#x03A8;' '' `% /Psi `%      9 `<version 9`> 
 '&#x03A9;' '' `% /Omega `%      10 `<version 10`> 
-'&#xFB00;' '' `% /ff `%   11 `<version 11`> 
-'&#xFB01;' '' `% /fi `%   12 `<version 12`> 
-'&#xFB02;' '' `% /fl `%   13 `<version 13`> 
-'&#xFB03;' '' `% /ffi `%   14 `<version 14`> 
-'&#xFB04;' '' `% /ffl `%   15 `<version 15`> 
-'&#x0131;' '' `% /dotlessi `%   16 `<version 16`> 
-'&#x0237;' '' `% /dotlessj `%   17 `<version 17`> 
+'&#xFB00;' '' `% /ff `%      11 `<version 11`> 
+'&#xFB01;' '' `% /fi `%      12 `<version 12`> 
+'&#xFB02;' '' `% /fl `%      13 `<version 13`> 
+'&#xFB03;' '' `% /ffi `%      14 `<version 14`> 
+'&#xFB04;' '' `% /ffl `%      15 `<version 15`> 
+'&#x0131;' '' `% /dotlessi `%      16 `<version 16`> 
+'&#x0237;' '' `% /dotlessj `%      17 `<version 17`> 
 '&#x0060;' '' `% /grave `%      18 `<version 18`> 
 '&#x00B4;' '' `% /acute `%      19 
 '&#x02C7;' '' `% /caron `%      20 
