--- a/lit/tex4ht-fonts-noncjk.tex
+++ b/lit/tex4ht-fonts-noncjk.tex
@@ -478,55 +478,55 @@
 %>>>
 
 \<gversion 2\><<<
-%                                                    Eitan M. Gurari %>>>
+% Eitan M. Gurari>>>
 
 \<version 2\><<<
-%                                                                    %>>>
+%>>>
 \<gversion 3\><<<
 `<version 2`> >>>
 
 \<version 3\><<<
-% This work may be distributed and/or modified under the conditions  %>>>
+% This work may be distributed and/or modified under the conditions>>>
 \<gversion 4\><<<
 `<version 3`> >>>
 
 \<version 4\><<<
-% of the LaTeX Project Public License, either version 1.3 of this    %>>>
+% of the LaTeX Project Public License, either version 1.3 of this>>>
 \<gversion 5\><<<
 `<version 4`> >>>
 
 \<version 5\><<<
-% license or (at your option) any later version. The latest version  %>>>
+% license or (at your option) any later version. The latest version>>>
 \<gversion 6\><<<
 `<version 5`> >>>
 
 \<version 6\><<<
-% of this license is in http://www.latex-project.org/lppl.txt and    %>>>
+% of this license is in http://www.latex-project.org/lppl.txt and>>>
 \<gversion 7\><<<
 `<version 6`> >>>
 
 \<version 7\><<<
-% version 1.3 or later is part of all distributions of LaTeX version %>>>
+% version 1.3 or later is part of all distributions of LaTeX version>>>
 \<gversion 8\><<<
 `<version 7`> >>>
 
 \<version 8\><<<
-% 2003/12/01 or later.                                               %>>>
+% 2003/12/01 or later.>>>
 \<gversion 9\><<<
 `<version 8`> >>>
 
 \<version 9\><<<
-%  This work has the LPPL maintenance status "maintained". This      %>>>
+% This work has the LPPL maintenance status "maintained".>>>
 \<gversion 10\><<<
 `<version 9`> >>>
 
 \<version 10\><<<
-% Current Maintainer of this work is the TeX4ht Project.             %>>>
+% Current Maintainer of this work is the TeX4ht Project.>>>
 \<gversion 11\><<<
 `<version 10`> >>>
 
 \<version 11\><<<
-%                                                                    %>>>
+%>>>
 \<gversion 12\><<<
 `<version 11`> >>>
 
@@ -536,7 +536,7 @@
 `<version 12`> >>>
 
 \<version 13\><<<
-% versions identification would be appreciated.>>>
+% version identification would be appreciated.>>>
 \<gversion 14\><<<
 `<version 13`> >>>
 
@@ -546,24 +546,23 @@
 `<version 14`> >>>
 
 \<version 15\><<<
-%                                                     tex4ht@tug.org %>>>
+% tex4ht@tug.org>>>
 \<gversion 16\><<<
 `<version 15`> >>>
 
 \<version 16\><<<
-%                                          http://www.tug.org/tex4ht %>>>
+% http://www.tug.org/tex4ht>>>
 
 \<gversion 17\><<<
 `<version 16`> >>>
 
 \<version 17\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%>>>
+%>>>
 \<gversion 18\><<<
 `<version 17`> >>>
 
 %%%%%%%%%%%%%
 \Section{EmacSpeak Properties}
-%%%%%%%%%%%%%
 
 Named values don't seem to be supported.
 See \Link[http://www.w3.org/TR/CSS21/aural.html]{Emacspeak}{}Section
