--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -24864,10 +24864,9 @@ colortbl.sty invokes color.sty, if the last package is not loaded.
 The same is true for array.sty.
 
 \<colortbl.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% colortbl.4ht                          |version %
-% Copyright (C) |CopyYear.1997.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% colortbl.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.1997. Eitan M. Gurari
+|<TeX4ht copywrite|>
 
    |<fix colortbl|>
    |<colortbl.sty shared config|>
