xcolor.4ht copyright
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@224 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -24686,10 +24686,9 @@ fragments.
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 \<xcolor.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% xcolor.4ht                            |version %
-% Copyright (C) |CopyYear.2007.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% colortbl.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.2007. Eitan M. Gurari
+|<TeX4ht copywrite|>
 \input color.4ht
 |<config xcolor|>
 \Hinput{xcolor}
