--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,9 +1,14 @@
+2016-12-14  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-4ht.tex (xcolor.4ht): copyright.
+
 2016-12-14  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-4ht.tex (colortbl.4ht): Added support for \color 
 	command in table column specifivation.
 	* tex4ht-4ht.tex (xcolor.4ht): Added support for colors 
 	defined by the user.
+	https://puszcza.gnu.org.ua/bugs/?346
 
 2016-12-13  Michal Hoftich  <michal.h21@gmail.com>
 
@@ -52,6 +57,8 @@
 	* tex4ht-env.tex (tex4ht.env): moved default picture conversion
 	scripts below alternative scripts, in order to enable their
 	selection with -c option of t4ht.
+	https://puszcza.gnu.org.ua/bugs/?343
+	http://tug.org/pipermail/tex4ht/2016q4/001689.html
 
 2016-12-04  Michal Hoftich  <michal.h21@gmail.com>
 
