Fixed listings support with mathescape option
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@225 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-15  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-4ht.tex (listings.4ht): Fixed support for mathescape
+	option
+
 2016-12-14  Karl Berry  <karl@freefriends.org>
 
 	* tex4ht-4ht.tex (xcolor.4ht): copyright.
