--- a/lit/tex4ht-html4.tex
+++ b/lit/tex4ht-html4.tex
@@ -13594,6 +13594,10 @@ for margin pars.
    {jpeg}
    {{\Configure{Needs}{File: \Gin@base.jpeg}\Needs{}}%
     \Picture[\a:GraphicsAlt]{\Gin@base.jpeg |<graphics dim|>}}
+\Configure{graphics*}
+   {svg}
+   {{\Configure{Needs}{File: \Gin@base.svg}\Needs{}}%
+    \Picture[\a:GraphicsAlt]{\Gin@base.svg |<graphics dim|>}}
 \NewConfigure{GraphicsAlt}{1}
 \Configure{GraphicsAlt}{PIC}
 |<includegraphics dim|>
