Fixed issues with nameref support
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@227 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,5 +1,10 @@
 2016-12-16  Michal Hoftich  <michal.h21@gmail.com>
 
+	* tex4ht-4ht.tex (nameref.4ht): Fixed support for empty nameref
+	types in labels, added support for asmath environments.
+
+2016-12-16  Michal Hoftich  <michal.h21@gmail.com>
+
 	* tex4ht-html4.tex (html4.4ht): Added support for inclusion of
 	SVG images
 
